# audio-synthesizer

./: Dockerfile  README.md  melody.mid  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
synthesizer/: main.py  midi_to_audio.ipynb  midi_to_time.py  notebook.ipynb
